--- a/react-calculator/src/index.css
+++ b/react-calculator/src/index.css
@@ -14,3 +14,18 @@ body {
   justify-content: center;
   font-family: 'Roboto', sans-serif;
 }
+
+.screen {
+  height: 4rem;
+  margin-bottom: 4rem;
+  font-size: 1.5rem
+}
+
+.wrapper {
+  background: #f6f8f9;
+  width: 20rem;
+  padding: 2rem;
+  margin-top: 4rem;
+  border-radius: 1rem;
+  box-shadow: 0px 9px 15px -3px rgba(0,0,0,0.1);
+}
