--- a/react-calculator/src/index.css
+++ b/react-calculator/src/index.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Roboto&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Roboto&display=swap");
 
 * {
   margin: 0;
@@ -12,13 +12,13 @@ body {
   display: flex;
   align-items: center;
   justify-content: center;
-  font-family: 'Roboto', sans-serif;
+  font-family: "Roboto", sans-serif;
 }
 
 .screen {
   height: 4rem;
   margin-bottom: 4rem;
-  font-size: 1.5rem
+  font-size: 1.5rem;
 }
 
 .wrapper {
@@ -27,5 +27,11 @@ body {
   padding: 2rem;
   margin-top: 4rem;
   border-radius: 1rem;
-  box-shadow: 0px 9px 15px -3px rgba(0,0,0,0.1);
+  box-shadow: 0px 9px 15px -3px rgba(0, 0, 0, 0.1);
+}
+
+.buttonBox {
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+  gap: 0.5rem;
 }
