--- a/react-calculator/src/index.css
+++ b/react-calculator/src/index.css
@@ -35,3 +35,30 @@ body {
   grid-template-columns: repeat(4, 1fr);
   gap: 0.5rem;
 }
+
+.button {
+  background: #e9f0f4;
+  height: 3.5rem;
+  padding: 10px;
+  border-radius: 10px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  cursor: pointer;
+  color: #242424;
+  border: none;
+  font-size: 1.5rem;
+}
+
+.button:hover {
+  border: 2px solid #242424;
+}
+
+.equals {
+  background: #4ebfc3;
+  grid-column: 3/5;
+}
+
+.opt {
+  background: #33ebf2;
+}
